# rustfuscator

./: CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md
examples/: obfuscate.rs
src/: lib.rs
tests/: obfuscator_test.rs
