[package]
name = "rustfuscator"
version = "1.1.0"
edition = "2024"
description = "A text obfuscation library using AES-GCM encryption"
authors = ["Milos Stojkovic <iqoologic@gmail.com>"]
license = "MIT"
repository = "https://github.com/IQooLogic/rustfuscator"
readme = "README.md"
keywords = ["obfuscation", "encryption", "security", "crypto"]
categories = ["cryptography", "authentication"]

[dependencies]
base64 = "0.22.1"
pbkdf2 = "0.13.0"
rand = "0.10.2"
sha2 = "0.11.0"
thiserror = "2.0.18"
aes-gcm = "0.11.0"
